zellij-utils/src/kdl/snapshots/zellij_utils__kdl__macros_to_string_multiple_macros.snap
---
source: zellij-utils/src/kdl/mod.rs
expression: serialized.to_string()
---
macros {
    macro1 {
        NewTab
        FocusNextPane
    }
    macro2 {
        Quit
    }
    macro3 {
        SwitchToMode "normal"
        CloseFocus
    }
}
