zellij-utils/src/kdl/snapshots/zellij_utils__kdl__plugins_to_string_with_file_and_web.snap
---
source: zellij-utils/src/kdl/mod.rs
assertion_line: 3891
expression: serialized.to_string()
---
plugins {
    filepicker location="file:/path/to/my/plugin.wasm" {
        cwd "/"
    }
    tab-bar location="https://foo.com/plugin.wasm"
}
