zellij-utils/src/kdl/snapshots/zellij_utils__kdl__themes_to_string_with_eight_bit_definitions.snap
---
source: zellij-utils/src/kdl/mod.rs
expression: serialized.to_string()
---
themes {
    default {
        text_unselected {
            base 90
            background 20
            emphasis_0 254
            emphasis_1 80
            emphasis_2 40
            emphasis_3 70
        }
        text_selected {
            base 90
            background 10
            emphasis_0 254
            emphasis_1 80
            emphasis_2 40
            emphasis_3 70
        }
        ribbon_selected {
            base 20
            background 40
            emphasis_0 30
            emphasis_1 254
            emphasis_2 70
            emphasis_3 60
        }
        ribbon_unselected {
            base 20
            background 1
            emphasis_0 30
            emphasis_1 90
            emphasis_2 60
            emphasis_3 70
        }
        table_title {
            base 40
            background 0
            emphasis_0 254
            emphasis_1 80
            emphasis_2 40
            emphasis_3 70
        }
        table_cell_selected {
            base 90
            background 10
            emphasis_0 254
            emphasis_1 80
            emphasis_2 40
            emphasis_3 70
        }
        table_cell_unselected {
            base 90
            background 20
            emphasis_0 254
            emphasis_1 80
            emphasis_2 40
            emphasis_3 70
        }
        list_selected {
            base 90
            background 10
            emphasis_0 254
            emphasis_1 80
            emphasis_2 40
            emphasis_3 70
        }
        list_unselected {
            base 90
            background 20
            emphasis_0 254
            emphasis_1 80
            emphasis_2 40
            emphasis_3 70
        }
        frame_selected {
            base 40
            background 0
            emphasis_0 254
            emphasis_1 80
            emphasis_2 70
            emphasis_3 0
        }
        frame_highlight {
            base 254
            background 0
            emphasis_0 254
            emphasis_1 254
            emphasis_2 254
            emphasis_3 254
        }
        exit_code_success {
            base 40
            background 0
            emphasis_0 80
            emphasis_1 20
            emphasis_2 70
            emphasis_3 60
        }
        exit_code_error {
            base 30
            background 0
            emphasis_0 50
            emphasis_1 0
            emphasis_2 0
            emphasis_3 0
        }
        multiplayer_user_colors {
            player_1 70
            player_2 60
            player_3 0
            player_4 50
            player_5 80
            player_6 0
            player_7 30
            player_8 0
            player_9 0
            player_10 0
        }
    }
}
